Questão 1 completa, exceto pelo valor das mobilidades

--- a/relatorio1/capa.tex
+++ b/relatorio1/capa.tex
@@ -18,7 +18,7 @@
 \noindent
 \Huge{ \textsf{\bf \titulo} }\\
 \vspace{1em}
-%\noindent
+\noindent
 \large{\textsf{\autor}}
 \end{center}
 \lyxline{}
@@ -34,6 +34,6 @@
 \textsf{\data}
 \end{center}
 
-%\newpage\ 
+\newpage 
 
 % capa - fim
