--- a/relatorio1/relatorio1.tex
+++ b/relatorio1/relatorio1.tex
@@ -61,16 +61,19 @@ transistores.
 
             \draw     (-2 , 2.2 ) -- (-2  , 2.9 ); %M1
             \draw     (-2 , 2.55) -- (-2.5, 2.55) node [anchor=east] {A};
+            \draw     (-1.5, 2.55) node [anchor=west] {$M_1$};
             \filldraw (-1.8, 2.9) -- (-1.7, 3   )
                                   -- (-1.7, 2.8 )
                                   -- cycle;
             \draw     ( 2 , 2.2 ) -- ( 2  , 2.9 ); %M2
             \draw     ( 2 , 2.55) -- ( 2.5, 2.55) node [anchor=west] {B};
+            \draw     ( 1.5, 2.55) node [anchor=east] {$M_2$};
             \filldraw ( 1.8, 2.9) -- ( 1.7, 3   )
                                   -- ( 1.7, 2.8 )
                                   -- cycle;
             \draw     (0.5, 1.2 ) -- ( 0.5, 0.5 ); %M3
             \draw     (0.5, 0.85) -- ( 1  , 0.85) node [anchor=west] {C};
+            \draw     (0.3, 0.85) node [anchor=east] {$M_3$};
             \filldraw (0.3, 1.2 ) -- ( 0.2, 1.3 )
                                   -- ( 0.2, 1.1 )
                                   -- cycle;
@@ -95,16 +98,19 @@ transistores.
         
             \draw     (-2  , -0.5 ) -- (-2  , -1.2 ); %M4
             \draw     (-2  , -0.85) -- (-2.5, -0.85) node [anchor=east] {A};
+            \draw     (-1.5, -0.85) node [anchor=west] {$M_4$};
             \filldraw (-1.5, -1.2 ) -- (-1.6, -1.1 )
                                     -- (-1.6, -1.3 )
                                     -- cycle;
             \draw     (-2  , -2.2 ) -- (-2  , -2.9 ); %M5
-            \draw     (-2  , -2.55) -- (-2.5, -2.55) node [anchor=east] {B};
+            \draw     (-2  , -2.55) -- (-2.5, -2.55) node [anchor=west] {B};
+            \draw     (-1.5, -2.55) node [anchor=west] {$M_5$};
             \filldraw (-1.5, -2.9 ) -- (-1.6, -3   )
                                     -- (-1.6, -2.8 )
                                     -- cycle;
             \draw     ( 2  , -2.05) -- ( 2  , -1.35); %M6
             \draw     ( 2  , -1.7 ) -- ( 2.5, -1.7 ) node [anchor=west] {C};
+            \draw     ( 1.5, -1.7 ) node [anchor=east] {$M_6$};
             \filldraw ( 1.5, -2.05) -- ( 1.6, -2.15)
                                     -- ( 1.6, -1.95)
                                     -- cycle;
@@ -230,7 +236,8 @@ novamente o último comando da coluna à esquerda.
 \end{lsitemize}
    Faça a verificação com o \emph{DRC (CALIBRE)} e elimine todos os erros.
 
-Obs.: Veja as opções do \textbf{ \emph{Route -- ARoute Commands -- Setup -- Display} } para melhor fazer o roteamento manual.
+Obs.: Veja as opções do \textbf{ \emph{Route -- ARoute Commands -- Setup -- Display} }
+para melhor fazer o roteamento manual.
 
 \textbf{10.} Utilize o comando \textbf{ \emph{Connectivity -- port -- Add to Port} } 
    para ampliar as áreas dos \emph{ports}. Para isso selecione o \emph{shape} que 
