--- a/relatorio1/relatorio.tex
+++ b/relatorio1/relatorio.tex
@@ -57,6 +57,7 @@
 \usepackage{listings}
 \lstset{
     breaklines=true,
+    basicstyle=\ttfamily\scriptsize,
     numbers=left,
     numberstyle=\tiny,
     frame=single
